bux fix: define color for user-status-collapse-toggle

--- a/theme.less
+++ b/theme.less
@@ -57,7 +57,7 @@ a {
 
 // override color for links in menu selection list, otherwise they will
 // inherit @mint-link from the previous rule.
-.menu-section-list a:hover, .menu-section-list button:hover {
+#user-status-collapse-toggle, .menu-section-list a:hover, .menu-section-list button:hover {
 	color: #FFF; // white
 }
 
